2019-04-26  Eric Herman <eric@freesa.org>

	version 2.0.1

	* src/eba.h: re-arrange order, functions at the end
	* configure.ac: version 2.0.1
	* Makefile.am: remove pre-tidy.patch
	* misc/pre-tidy.patch: delete

2019-04-20  Eric Herman <eric@freesa.org>

	version 2.0.0-dev

	This re-work is aimed at reducing the complexity of the library
	for embedded use, and notes that the only usage of printf was
	for printing error messages which were primarly useful in debug
	situtions, and proved useless in embedded.

	The re-worked API now makes previous checks calls to assert.

	For now, these are the main changes:
	- always reserve space for endian-ness, avoid API complexity
	- remove Eba_crash macro, which was irritating to use in embedded
	- for hosted, no longer call printf, nor have global error file
	- replace EBA_SIZE_TYPE with EBA_SIZE_T_TYPEDEFINED
	- move EBA_CHAR_BIT from eba.h to eba.c (surely nobody needs this)

	* src/eba.h: API update
	* src/eba.c: fix all the API changes, return rather than crash
	* tests/test-shift-fill.c: remove EBA_CHAR_BIT from test
	* tests/test-shift-left.c: remove EBA_CHAR_BIT from test
	* configure.ac: version bump to 2.0.0-dev
	* Makefile.am: -DNDEBUG implies -Wno-unused-parameter
	* misc/pre-tidy.patch: respin


2018-11-20  Eric Herman <eric@freesa.org>

	make default endian-ness be eba_big_endian
	add eba_to_string
	Eba_memset and Eba_memcpy can be used externally in embedded
	projects now that the eba_diy_ versions are non-static
	improve shift performance (shift right/left now are byte-wise
	rather than bitwise)

	* src/eba.h: eba_to_string, eba_diy_memset, eba_diy_memcpy
	* src/eba.c: eba_to_string, improve shift performance
	* tests/test-get.c: default eba_big_endian
	* tests/test-ring-shift.c: default eba_big_endian
	* tests/test-set.c: default eba_big_endian
	* tests/test-shift-fill.c: default eba_big_endian
	* tests/test-shift-left.c: default eba_big_endian
	* tests/test-shift-right.c: default eba_big_endian