@@ -1,17 +1,6 @@
-/*
-sieve-of-eratosthenes.c: demo of using libeba embedable bit array
-Copyright (C) 2017 Eric Herman <eric@freesa.org>
-
-This work is free software: you can redistribute it and/or modify it
-under the terms of the GNU Lesser General Public License as published by
-the Free Software Foundation, either version 3 of the License, or (at
-your option) any later version.
-
-This work is distributed in the hope that it will be useful, but WITHOUT
-ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
-FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
-License for more details.
-*/
+/* SPDX-License-Identifier: LGPL-3.0-or-later */
+/* sieve-of-eratosthenes.c: demo of using libeba embedable bit array */
+/* Copyright (C) 2017, 2019 Eric Herman <eric@freesa.org> */
 
 #include <stdio.h>
 #include <stdlib.h>
