@@ -1,17 +1,6 @@
-/*
-eba.c: embedable bit array - hopefully somewhat suitable for small CPUs
-Copyright (C) 2017, 2018 Eric Herman <eric@freesa.org>
-
-This work is free software: you can redistribute it and/or modify it
-under the terms of the GNU Lesser General Public License as published by
-the Free Software Foundation, either version 3 of the License, or (at
-your option) any later version.
-
-This work is distributed in the hope that it will be useful, but WITHOUT
-ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
-FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
-License for more details.
-*/
+/* SPDX-License-Identifier: LGPL-3.0-or-later */
+/* eba.c: embedable bit array - hopefully somewhat suitable for small CPUs */
+/* Copyright (C) 2017, 2018, 2019 Eric Herman <eric@freesa.org> */
 
 #include "eba.h"
 
