@@ -1,20 +1,7 @@
-/*
-libecheck: "E(asy)Check" boiler-plate to make simple testing easier
-Copyright (C) 2016, 2017, 2018, 2019 Eric Herman <eric@freesa.org>
+/* SPDX-License-Identifier: LGPL-3.0-or-later */
+/* libecheck: "E(asy)Check" boiler-plate to make simple testing easier */
+/* Copyright (C) 2016, 2017, 2018, 2019 Eric Herman <eric@freesa.org> */
 
-This work is free software: you can redistribute it and/or modify it
-under the terms of the GNU Lesser General Public License as published by
-the Free Software Foundation, either version 3 of the License, or (at
-your option) any later version.
-
-This work is distributed in the hope that it will be useful, but WITHOUT
-ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
-FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
-License for more details.
-
-	https://www.gnu.org/licenses/lgpl-3.0.txt
-	https://www.gnu.org/licenses/gpl-3.0.txt
-*/
 #include "echeck.h"
 #include <string.h>
 
