@@ -1,3 +1,7 @@
+2019-08-20  Eric Herman <eric@freesa.org>
+
+	SPDX-License-Identifier: LGPL-3.0-or-later
+
 2019-04-26  Eric Herman <eric@freesa.org>
 
 	version 2.0.1
